--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,7 @@ button, input {
     display: grid;
     grid-template-rows: auto auto;
     justify-content: center;
+    grid-gap: 1em;
 }
 
 .map {
